infra/aws.template
Description: "Deploys the shepherd-db-seeder stack"

Resources:

  ShepherdVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: vpc-shepherd-db-seeder
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ShepherdVPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: '10.0.0.0/24'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: shepherd-db-seeder-subnet1
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ShepherdVPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: '10.0.1.0/24'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: shepherd-db-seeder-subnet2
  Subnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref ShepherdVPC
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: '10.0.2.0/24'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: shepherd-db-seeder-subnet3
# DB subnet group to be passed to rds          
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: shepherd-db-seeder-dbsubnetgroup
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2
        - !Ref Subnet3
      DBSubnetGroupName: shepherd-db-seeder-dbsubnetgroup
  
# security group to be passed to docker and rds
  ShepherdSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Shepherd-db-seeder default SG"
      VpcId: !Ref ShepherdVPC
      GroupName: shepherd-db-seeder-default-sg
  DefaultSecurityGroupIngress5432:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ShepherdSecurityGroup
      SourceSecurityGroupId: !Ref ShepherdSecurityGroup
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
  DefaultSecurityGroupIngress84:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ShepherdSecurityGroup
      SourceSecurityGroupId: !Ref ShepherdSecurityGroup
      IpProtocol: tcp
      FromPort: 84
      ToPort: 84
      
# some router/gateway boilerplate
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: shepherd-db-seeder-internet-gw
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref ShepherdVPC
  RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref ShepherdVPC
      Tags:
        - Key: Name
          Value: shepherd-db-seeder-route-table
  RouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref RouteTable
  RouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref RouteTable
  RouteTableAssociation3:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref Subnet3
      RouteTableId: !Ref RouteTable
  InternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: '0.0.0.0/0'


  ShepherdPgdb:
    Type: AWS::RDS::DBInstance
    # had to add this DependsOn as AWS was not picking up the reference later. bug?
    DependsOn: DBSubnetGroup
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      DBInstanceIdentifier: shepherd-db-seeder-pgdb
      VPCSecurityGroups:
        - Ref: ShepherdSecurityGroup
      DBSubnetGroupName: 
        Ref: DBSubnetGroup
      AllocatedStorage: 40
      DBInstanceClass: "db.t3.xlarge"
      StorageType: gp2
      Engine: postgres
      EngineVersion: "13.3"
      # DeleteAutomatedBackups: false
      DBName: arblacklist
      MasterUsername: postgres
      MasterUserPassword: postgres
      Tags:
        - Key: Project
          Value: "shepherd-db-seeder RDS PostgreSQL"
  

Outputs:

  AwsAccountId:
    Value: !Ref AWS::AccountId

  ShepherdVPC:
    Description: ShepherdVPC
    Value: !Ref ShepherdVPC

  ShepherdSecurityGroup:
    Description: ShepherdSecurityGroup
    Value: !Ref ShepherdSecurityGroup

  RdsEndpointUrl:
    Description: "DB_HOST Endpoint of the newly created RDS PostgreSQL"
    Value: !GetAtt ShepherdPgdb.Endpoint.Address


  Subnet1:
    Value: !Ref Subnet1
  Subnet2:
    Value: !Ref Subnet2
  Subnet3:
    Value: !Ref Subnet3

  RouteTable:
    Value: !Ref RouteTable

  # LoadBalancerArn:
  #   Value: !Ref LoadBalancer
  # LoadBalancerDnsName:
  #   Value: !GetAtt LoadBalancer.DNSName
